# eveHap

./: .gitignore  CITATION.cff  README.md  SPEC.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  validation.yml
data/dbsnp/: mtdna_rsids.tsv
data/reference/: rCRS.fasta  rCRS_MT.fasta  rCRS_MT.fasta.fai  rCRS_chrM.fasta  rCRS_chrM.fasta.fai
evehap/: __init__.py  cli.py
evehap/adapters/: __init__.py  bam.py  base.py  fasta.py  fastq.py  hsd.py  microarray.py  vcf.py
evehap/core/: __init__.py  classifier.py  damage.py  phylotree.py  profile.py  reference.py
evehap/data/reference/: rCRS.fasta.fai
evehap/output/: __init__.py  report.py  result.py
pipelines/: README.md
pipelines/nextflow/: main.nf  nextflow.config
pipelines/snakemake/: Snakefile  config.yaml
pipelines/snakemake/profiles/slurm/: config.yaml
scripts/: generate_23andme_from_vcf.py  generate_rsid_lookup.py  verify_cli.py
tests/: __init__.py  conftest.py  run_integration_tests.py  test_cli.py  test_damage_filter.py
tests/fixtures/: ERR1341819.chrM.bam  ERR1341819.chrM.bam.bai  ERR1341839.chrM.bam  ERR1341839.chrM.bam.bai
tests/test_adapters/: __init__.py  test_bam.py  test_fasta.py  test_hsd.py  test_microarray.py  test_vcf.py
tests/test_core/: __init__.py  test_classifier.py  test_damage.py  test_phylotree.py  test_profile.py
tests/test_integration/: __init__.py  test_1kg.py  test_aadr.py  test_formats.py  test_hgdp.py  test_microarray.py  test_tree_types.py
validation/: __init__.py  config.yaml  run_matrix_validation.py  run_validation.py
