[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evehap"
version = "0.1.0"
description = "Universal mtDNA Haplogroup Classifier"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "eveHap Authors"}
]
keywords = ["mtdna", "haplogroup", "genetics", "phylogenetics", "ancient-dna"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "pysam>=0.21.0",
    "biopython>=1.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]
validation = [
    "tqdm>=4.65",
    "pandas>=2.0",
    "tabulate>=0.9",
]

[project.scripts]
evehap = "evehap.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/evehap"
Documentation = "https://github.com/your-org/evehap#readme"
Repository = "https://github.com/your-org/evehap"

[tool.setuptools.packages.find]
where = ["."]
include = ["evehap*"]

[tool.setuptools.package-data]
evehap = [
    "data/phylotree/*.xml",
    "data/phylotree/*.txt",
    "data/reference/*.fasta",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (excluded by default)",
]
# Exclude integration tests by default
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Ruff linter configuration
[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["evehap"]

# Black formatter configuration
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "validation/"]

# Coverage configuration
[tool.coverage.run]
source = ["evehap"]
omit = ["tests/*", "validation/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
